syntax="proto3";

package logger;

enum MsgType{
	HEART=0;
	VERIFY=1;
	LOG=2;
	CONFIRM=3;
	REMOVE=4;
}

message TotalMsg{
	MsgType type=1;
	VerifyMsg verify=2;
	LogMsg log=3;
	ConfirmMsg confirm=4;
	RemoveMsg remove=5;
}
message VerifyMsg{
}

message LogMsg{
	int64 serverid=1;
	bytes content=2;
	string filename=3;
	uint32 line=4;
	uint32 memindex=5;
}
message ConfirmMsg{
	string filename=1;
	uint32 line=2;
	uint32 memindex=3;
}
message RemoveMsg{
	int32 year=1;
	int32 month=2;
	int32 day=3;
	int32 hour=4;
}
